# de_zoomcamp

./: README.md  pyproject.toml
week1/: .gitignore  Dockerfile  ingest_data.py  main.tf  outputs.tf  pipeline.py  pyproject.toml  variables.tf
week1/homework/: Dockerfile  docker-compose.yaml  ingest_data.py
week2/mage-zoomcamp/: .gitignore  docker-compose.yml  main.tf  outputs.tf  variables.tf
