[tool.poetry]
name = "docker-sql"
version = "0.1.0"
description = ""
authors = ["Erik Tastepe <erik.tastepe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgcli = "^4.0.1"
jupyter = "^1.0.0"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
